--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<h3>Pastime</h3>
+		<h3>Pastime on Github</h3>
 		<nav>
 			<ul>
 				<li><a href="#">Homepage</a></li>
